--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -11,36 +11,25 @@
 }
 @section Scripts {
     <script>
-    $(function () {
-        $(".closeLink").click(function () {
-            toastr.info("此功能暂未开放");
-        });
-        //K3重置密码
-        $("#K3Img").click(function () {
-            $.post("@Url.Content("~/Home/ValidateEmail")", {}, function (data) {
-                if (!data.suc) {
-                    toastr.error(data.msg);
-                } else {
-                    $.post("@Url.Content("~/Home/ValidatePhone")", {}, function (data) {
-                        if (data.suc) {
-                            window.location.href = "@Url.Content("~/K3/AccountReset")";
+        $(function () {
+            $(".closeLink").click(function () {
+                toastr.info("此功能暂未开放");
+            });
+            //K3重置密码
+            $("#K3Img").click(function () {
+                $.post("@Url.Content("~/Home/ValidateEmail")", {}, function (data) {
+                    if (!data.suc) {
+                        toastr.error(data.msg);
+                    } else {
+                        $.post("@Url.Content("~/Home/ValidatePhone")", {}, function (data) {
+                            if (data.suc) {
+                                window.location.href = "@Url.Content("~/K3/AccountReset")";
                             } else {
                                 toastr.error(data.msg);
                             }
                         });
                     }
                 });
-            });
-                
-
-            //请假报表
-            $("#alReport").on("click", function () {
-                var w = $(document).width();                
-                if (w > 900) {
-                    window.location.href = "@Url.Content("~/Report/ALReport")";
-                } else {
-                    toastr.error("此功能必须在大屏幕显示器操作");
-                }
             });
 
         });
@@ -55,21 +44,16 @@
         </ol>
     </div>
     <div class="panel-body" id="workGroup">
-        <div class="row" style="margin: 0;">            
+        @if (DateTime.Now < DateTime.Parse("2019-05-01")) {
+            <div class="well well-sm text-danger">注意：请假报表功能已移动到请假申请里面</div>
+        }
+        <div class="row" style="margin: 0;">
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=AL")">
                     <img src="@Url.Content("~/Content/images/leave.png")" alt="leave" class="center-block" />
                     <p class="text-center">请假申请</p>
                 </a>
             </div>
-            @if ((bool)ViewData["isDepReporter"]) { 
-                <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a id="alReport" href="#">
-                        <img src="@Url.Content("~/Content/images/report.png")" alt="leave" class="center-block" />
-                        <p class="text-center">请假报表</p>
-                    </a>
-                </div>
-            }
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="#" id="K3Img">
                     <img src="@Url.Content("~/Content/images/box.png")" alt="leave" class="center-block" />
@@ -77,12 +61,12 @@
                 </a>
             </div>
             @*@if (auts.IndexOf("ModuelTest") >= 0) {*@
-                <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=SA")">
-                        <img src="@Url.Content("~/Content/images/stock.png")" alt="leave" class="center-block" />
-                        <p class="text-center">仓管权限申请</p>
-                    </a>
-                </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=SA")">
+                    <img src="@Url.Content("~/Content/images/stock.png")" alt="leave" class="center-block" />
+                    <p class="text-center">仓管权限申请</p>
+                </a>
+            </div>
             @*}*@
             @if (auts.IndexOf("StockBillAudit1") >= 0) {
                 <div class="col-xs-4 col-sm-3 col-md-2">
@@ -97,6 +81,12 @@
                     <a href="@Url.Content("~/Apply/ApplyIndex?billType=UC")">
                         <img src="@Url.Content("~/Content/images/uc.png")" alt="leave" class="center-block" />
                         <p class="text-center">非正常出货</p>
+                    </a>
+                </div>
+                <div class="col-xs-4 col-sm-3 col-md-2">
+                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=ET")">
+                        <img src="@Url.Content("~/Content/images/truck.png")" alt="leave" class="center-block" />
+                        <p class="text-center">紧急出货运输</p>
                     </a>
                 </div>
             }
@@ -120,7 +110,7 @@
                     <p class="text-center">电子公司专用流程</p>
                 </a>
             </div>
-            
+
         </div>
     </div>
 </div>
