--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -219,11 +219,11 @@
                     return;
                 }
 
-                if(bankCardNumber==""){
-                    toastr.error("请输入发放工资的银行卡号");
-                    $("#r_bank_number").focus();
-                    return;
-                }
+                //if(bankCardNumber==""){
+                //    toastr.error("请输入发放工资的银行卡号");
+                //    $("#r_bank_number").focus();
+                //    return;
+                //}
 
                 //if (emailCode == "") {
                 //    toastr.error("请输入邮箱验证码");
@@ -568,7 +568,7 @@
                             <label for="r_id_number" class="sr-only">工资银行卡号</label>
                             <div class="input-group">
                                 <div class="input-group-addon"><span class="fa fa-bank"></span></div>
-                                <input type="text" id="r_bank_number" class="form-control" placeholder="请输入发放工资的银行卡号" required />
+                                <input type="text" id="r_bank_number" class="form-control" placeholder="请输入发放工资的银行卡号(第三方员工可不填)" required />
                             </div>
                         </div>
                         @*<div class="form-group">
