--- a/EmpInfo/Views/Apply/CheckALApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckALApply.cshtml
@@ -3,41 +3,18 @@
     ALApplyModel al = (ALApplyModel)ViewData["am"];
 }
 @section CSS{
-    <style type="text/css">
-        
+    <style type="text/css">        
         #contentTb th{
             color: gray;
             font-weight:normal;
             font-style:italic;
         }
-
-        #al_file_tb th {
-            font-size: small;
-            text-align: center;
-        }
-
-        #al_file_tb td {
-            font-size: small;
-            text-align: center;
-        }
-
-        #al_file_list i {
-            cursor: pointer;
-        }
     </style>
 }
 @section Scripts {
     <script>
-    $(function () {
-        $("#al_file_list").on("click", "td i", function () {
-            var fileTD = $(this).parents("tr").find("td")[0];
-            var fileName = $(fileTD).attr("data-fd");
-            //window.location.href = "@Url.Content("~/File/DownLoadFile?sysNum=")" + "@al.sysNo" + "&fileName=" + fileName;
-            //直接打开网页查看图片，不下载
-            var sn = "@al.sysNo";
-            var path = sn.substr(0, 2) + "/20" + sn.substr(2, 2) + "/" + sn.substr(4, 2) + "/" + sn + "/" + fileName;
-            window.location.href = "@Url.Content("~/Att/")" + path;
-        });
+    $(function () {        
+        $("#attDiv").load("../Item/PicAttachments", { sysNo: "@al.sysNo" }, function () { });
         $("#flowRecordBt").on("click", function () {
             var box = $("<div></div>");
             $(box).load("CheckFlowRecord .list-group", { sysNo: "@al.sysNo" }, function () {
@@ -48,33 +25,33 @@
         $("#leaveRecordBt").on("click", function () {
 
             $.post("@Url.Content("~/ApplyExtra/GetLeaveRecordsInOneYear")", { applierNameAndCard: "@al.applierNameAndCard" }, function (data) {
-                    if (data.suc) {
-                        var trs = data.list;
-                        if (trs.length == 0) {
-                            toastr.error("最近1年没有已通过的请假记录");
-                            return;
-                        }
-                        var table = "<table width='100%' class='table'><thead><tr><th style='width:35%'>流水号/日期</th><th style='width:65%'>请假内容</th></tr></thead><tbody>";
+                if (data.suc) {
+                    var trs = data.list;
+                    if (trs.length == 0) {
+                        toastr.error("最近1年没有已通过的请假记录");
+                        return;
+                    }
+                    var table = "<table width='100%' class='table'><thead><tr><th style='width:35%'>流水号/日期</th><th style='width:65%'>请假内容</th></tr></thead><tbody>";
 
-                        for (var i = 0; i < trs.length; i++) {
-                            table += "<tr>";
-                            table += "<td><a href='checkApply?sysNo=" + trs[i].sysNo + "' target='_blank'>" + trs[i].sysNo + "</a><br/>" + trs[i].applyTime + "</td>";
-                            table += "<td>" + trs[i].leaveType + " : " + trs[i].leaveDays + "<br/>" + trs[i].leaveDateSpan + "</td>";
-                            table += "</tr>";
-                        }
-
-                        table += "</tbody></table>";
-                        openMessageDialog(table, "查看最近1年已通过请假记录");
-                    } else {
-                        toastr.error(data.msg);
+                    for (var i = 0; i < trs.length; i++) {
+                        table += "<tr>";
+                        table += "<td><a href='checkApply?sysNo=" + trs[i].sysNo + "' target='_blank'>" + trs[i].sysNo + "</a><br/>" + trs[i].applyTime + "</td>";
+                        table += "<td>" + trs[i].leaveType + " : " + trs[i].leaveDays + "<br/>" + trs[i].leaveDateSpan + "</td>";
+                        table += "</tr>";
                     }
 
-
-                });
+                    table += "</tbody></table>";
+                    openMessageDialog(table, "查看最近1年已通过请假记录");
+                } else {
+                    toastr.error(data.msg);
+                }
 
 
             });
+
+
         });
+    });
 </script>
 }
 <div class="row" style="margin-left:0;margin-right:0;">
@@ -159,41 +136,8 @@
                         <td>@al.informMan</td>
                     </tr>
                 </table>  
-                @if (al.hasAttachment) { 
-                <div class="b-div">
-                    <div class="panel panel-default" id="al_file_panel">
-                        <div class="panel-heading">附件信息</div>
-                        <div class="panel-body" style="padding:0 8px;">
-                            <table class="table table-condensed table-hover" id="al_file_tb" style="margin:10px 0;">
-                                <thead>
-                                    <tr>
-                                        <th style="width:55%;">名称</th>
-                                        <th style="width:25%;">大小</th>
-                                        <th style="width:20%;">查看</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="al_file_list">
-                                    @foreach (var file in al.attachments) {
-                                        <tr>
-                                            <td data-fd="@file.fileName">
-                                                @if (file.fileName.Length > 20) {
-                                                    var ext = file.fileName.Substring(file.fileName.IndexOf("."));
-                                                    var showName = file.fileName.Substring(0, 14) + ".." + ext;
-                                                    <span>@showName</span>
-                                                }
-                                                else {
-                                                    <span>@file.fileName</span>
-                                                }
-                                            </td>
-                                            <td>@file.fileSize</td>
-                                            <td><i class="fa fa-file-picture-o text-success"></i></td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                @if (al.hasAttachment) {
+                    <div class="b-div" id="attDiv"></div>
             }
             </div>
         </div>
