--- a/EmpInfo/Views/Apply/CheckCRApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckCRApply.cshtml
@@ -1,7 +1,6 @@
 ﻿@using EmpInfo.Models;
 @{
-    CRCheckApplyModel m = ViewData["am"] as CRCheckApplyModel;
-    ei_CRApply cr = m.cr;
+    ei_CRApply cr = ViewData["am"] as ei_CRApply;    
 }
 @section CSS{
     <style type="text/css">
@@ -9,40 +8,20 @@
             color: gray;
             font-weight: normal;
             font-style: italic;
-        }
-
-        #al_file_tb th {
-            font-size: small;
-            text-align: center;
-        }
-
-        #al_file_tb td {
-            font-size: small;
-            text-align: center;
-        }
-
-        #al_file_list i {
-            cursor: pointer;
-        }
+        }       
     </style>
 }
 @section Scripts {
     <script>
         $(function () {
-            $("#al_file_list").on("click", "td i", function () {
-                var fileTD = $(this).parents("tr").find("td")[0];
-                var fileName = $(fileTD).attr("data-fd");
-                var sn = "@cr.sys_no";
-                var path = sn.substr(0, 2) + "/20" + sn.substr(2, 2) + "/" + sn.substr(4, 2) + "/" + sn + "/" + fileName;
-                window.location.href = "@Url.Content("~/Att/")" + path;
-            });
+            $("#attDiv").load("../Item/PicAttachments", { sysNo: "@cr.sys_no" }, function () { });
             $("#flowRecordBt").on("click", function () {
                 var box = $("<div></div>");
                 $(box).load("CheckFlowRecord .list-group", { sysNo: "@cr.sys_no" }, function () {
                     openMessageDialog($(box).html(), "查看流转记录");
                 });
 
-            });        
+            });
         });
     </script>
 }
@@ -107,41 +86,8 @@
                         <td>@cr.comment</td>
                     </tr>
                 </table>     
-                @if (cr.has_attachment==true) { 
-                    <div class="b-div">
-                        <div class="panel panel-default" id="al_file_panel">
-                            <div class="panel-heading">附件信息</div>
-                            <div class="panel-body" style="padding:0 8px;">
-                                <table class="table table-condensed table-hover" id="al_file_tb" style="margin:10px 0;">
-                                    <thead>
-                                        <tr>
-                                            <th style="width:55%;">名称</th>
-                                            <th style="width:25%;">大小</th>
-                                            <th style="width:20%;">查看</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="al_file_list">                                    
-                                        @foreach (var file in m.attachments) {
-                                            <tr>
-                                                <td data-fd="@file.fileName">
-                                                    @if (file.fileName.Length > 20) {
-                                                        var ext = file.fileName.Substring(file.fileName.IndexOf("."));
-                                                        var showName = file.fileName.Substring(0, 14) + ".." + ext;
-                                                        <span>@showName</span>
-                                                    }
-                                                    else {
-                                                        <span>@file.fileName</span>
-                                                    }
-                                                </td>
-                                                <td>@file.fileSize</td>
-                                                <td><i class="fa fa-file-picture-o text-success"></i></td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
+                @if (cr.has_attachment == true) {
+                    <div class="b-div" id="attDiv"></div>
                 }                          
             </div>
         </div>
